# src/main/java/com/vape/sso/controller/SessionController.java
@@ -1,10 +1,10 @@
 package com.vape.sso.controller;
 
-import com.vape.sso.service.SessionService;
-import com.vape.sso.swagger.v1.api.SessionApi;
+import com.vape.sso.service.TokenService;
+import com.vape.sso.swagger.v1.api.TokenApi;
 import com.vape.sso.swagger.v1.model.SessionRequest;
-import com.vape.sso.swagger.v1.model.SessionResponse;
-import com.vape.sso.swagger.v1.model.SessionState;
+import com.vape.sso.swagger.v1.model.Token;
+import com.vape.sso.swagger.v1.model.TokenState;
 import org.apache.commons.lang.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -13,24 +13,28 @@ import org.springframework.web.bind.annotation.*;
 
 @RestController
 @RequestMapping("/")
-public class SessionController implements SessionApi {
+public class SessionController implements TokenApi {
 
     @Autowired
-    private SessionService sessionService;
+    private TokenService tokenService;
 
     @Override
-    public ResponseEntity<SessionState> getSession(String sessionId, String token) {
+    public ResponseEntity<TokenState> getSession(String sessionId, String token) {
         //TODO remove this mock and implement real shit
-//        SessionState mock = new SessionState();
+//        TokenState mock = new TokenState();
 //        mock.setStatus(SessionStatus.ACTIVE.to);
         return null;
     }
 
     @Override
-    public ResponseEntity<SessionResponse> postNewSession(String clientId, SessionRequest credential) {
-        if (StringUtils.isEmpty(clientId) || !clientId.equals(credential.getClientId())) {
-            return new ResponseEntity<>(new SessionResponse(), HttpStatus.BAD_REQUEST);
+    public ResponseEntity<Token> postNewSession(String clientId, SessionRequest credential) {
+        if(StringUtils.isEmpty(clientId) || !clientId.equals(credential.getClientId())) {
+            return new ResponseEntity<>(new Token(), HttpStatus.BAD_REQUEST);
         }
-        return new ResponseEntity<>(sessionService.activateNewSession(credential), HttpStatus.OK);
+        Token session = tokenService.activateNewSession(credential);
+        if(session.getSecrete() == null) {
+            return new ResponseEntity<>(session, HttpStatus.UNAUTHORIZED);
+        }
+        return new ResponseEntity<>(tokenService.activateNewSession(credential), HttpStatus.OK);
     }
 }
